--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "myfirstreactapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://MarlonQuishpi.github.io/myfirstreactapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
