--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myfirstreactapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://MarlonQuishpi.github.io/myfirstreactapp/",
+  "homepage": "https://marlonquishpi.github.io/myfirstreactapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
